--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,49 @@
 plugins {
-    id 'java'
+    id 'idea'
+    id 'java-library'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
-group = 'fr.cedricxbg'
-version = '1.0-SNAPSHOT'
+apply plugin: 'org.openjfx.javafxplugin'
+
+group 'fr.cedricxbg'
+version '1.0.0'
 
 repositories {
     mavenCentral()
+    maven {
+        url = 'https://jitpack.io/'
+        name = 'JitPack'
+    }
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
+
+    implementation 'fr.flowarg:flowupdater:1.3.+'
+    implementation 'fr.flowarg:openlauncherlib:3.+'
 }
 
-test {
-    useJUnitPlatform()
+javafx {
+    version = 12
+    modules = ['javafx.controls']
+}
+
+application {
+    getMainClass().set('fr.cedricxbg.launchertest.Main')
+}
+
+compileJava {
+    options.encoding = "UTF-8"
+}
+
+jar {
+    manifest.attributes.put('Main-Class', 'fr.cedricxbg.launchertest.Main')
+
+    from {
+        configurations.compileClasspath.collect {
+            it.isDirectory() ? it : zipTree(it)
+        }
+    }
 }
