--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ plugins {
 
 apply plugin: 'org.openjfx.javafxplugin'
 
-group 'fr.cedricxbg'
-version '1.0.0'
+group = 'fr.cedricxbg'
+version = '1.0.0'
 
 repositories {
     mavenCentral()
@@ -16,18 +16,27 @@ repositories {
         url = 'https://jitpack.io/'
         name = 'JitPack'
     }
+    maven {
+        url 'https://litarvan.github.io/maven'
+    }
 }
 
 dependencies {
+    //implementation fileTree(dir: 'libs', include: '*.jar')
+
     implementation 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
 
     implementation 'fr.flowarg:flowupdater:1.3.+'
     implementation 'fr.flowarg:openlauncherlib:3.+'
+
+    implementation 'com.github.goxr3plus:FX-BorderlessScene:4.+'
+
+    implementation 'fr.litarvan:openauth:1.1.6'
 }
 
 javafx {
     version = 12
-    modules = ['javafx.controls']
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
 }
 
 application {
@@ -40,9 +49,10 @@ compileJava {
 
 jar {
     manifest.attributes.put('Main-Class', 'fr.cedricxbg.launchertest.Main')
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 
     from {
-        configurations.compileClasspath.collect {
+        configurations.runtimeClasspath.collect {
             it.isDirectory() ? it : zipTree(it)
         }
     }
